--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,8 @@ name = "pypi"
 
 [packages]
 flask = "*"
+flask-bcrypt = "*"
+flask-socketio = "*"
 flask-sqlalchemy = "3.0.3"
 Werkzeug = "2.2.2"
 flask-migrate = "*"
